Create disk analyzer using virtual threads